--- a/webapps/iis/onepage.html
+++ b/webapps/iis/onepage.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta charset="utf-8">
 	
-	<title>Innovative Infusion Solutions</title>
+	<title>IP 360 OS</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
@@ -82,8 +82,7 @@
   <script src="js/common/dd4table.js"></script>
   <script src="js/gen/generaldata.js"></script>
   <script src="js/gen/appointmentstateui.js"></script>
-	<script src="js/factory/shareddata.js"></script>
-  <script src="js/controller/calctrl.js"></script>
+  <script src="js/factory/shareddata.js"></script>
   <script src="js/controller/calendarctrl.js"></script>
   <script src="js/controller/iisctrl.js"></script>
   <script src="js/controller/intakectrl.js"></script>
@@ -92,6 +91,7 @@
   <script src="js/controller/patientctrl.js"></script>
   <script src="js/controller/useraddctrl.js"></script>
 	<script src="js/controller/vendorctrl.js"></script>
+  <script src="js/controller/vendoraddctrl.js"></script>
   <script src="js/route.js"></script>
   <script src="js/module.js"></script>
 
