Api changes to match JSON standard

--- a/webapps/iis/onepage.html
+++ b/webapps/iis/onepage.html
@@ -71,10 +71,9 @@
 	
 	<!-- Digital D4 -->
 	<script src="js/bootstrap.js"></script>
-	<script src="js/common/jsonconnector.js"></script>
 	<script src="js/common/daterange.js"></script>
   <script src="js/common/sessionwatcher.js"></script>
-  <script src="js/common/protoservice.js"></script>
+  <script src="js/common/jsonservice.js"></script>
   <script src="js/common/userservice.js"></script>
   <script src="js/common/generaldataservice.js"></script>
   <script src="js/common/userctrl.js"></script>
