Combined all my js files into 2 js upon compile

--- a/webapps/iis/onepage.html
+++ b/webapps/iis/onepage.html
@@ -70,33 +70,8 @@
   <script src="js/lib/calendar.js"></script>
 	
 	<!-- Digital D4 -->
-	<script src="js/bootstrap.js"></script>
-	<script src="js/common/daterange.js"></script>
-  <script src="js/common/sessionwatcher.js"></script>
-  <script src="js/common/jsonservice.js"></script>
-  <script src="js/common/userservice.js"></script>
-  <script src="js/common/generaldataservice.js"></script>
-  <script src="js/common/userctrl.js"></script>
-  <script src="js/common/module.js"></script>
-  <script src="js/common/dd4table.js"></script>
-  <script src="js/gen/generaldata.js"></script>
-  <script src="js/gen/appointmentstateui.js"></script>
-  <script src="js/factory/shareddata.js"></script>
-  <script src="js/controller/calendarctrl.js"></script>
-  <script src="js/controller/iisctrl.js"></script>
-  <script src="js/controller/intakectrl.js"></script>
-  <script src="js/controller/nurseaddctrl.js"></script>
-  <script src="js/controller/nursectrl.js"></script>
-  <script src="js/controller/patientctrl.js"></script>
-  <script src="js/controller/useraddctrl.js"></script>
-	<script src="js/controller/vendorctrl.js"></script>
-  <script src="js/controller/vendoraddctrl.js"></script>
-  <script src="js/route.js"></script>
-  <script src="js/module.js"></script>
-
-  <!-- Deprecated -->
-	<script src="js/update.js"></script>
-	<script src="js/mapauto.js"></script>
+	<script src="js/dd4common.js"></script>
+  <script src="js/iis.js"></script>
 </head>
 
 <body data-ng-app="iis" data-ng-controller="IISCtrl as iisCtrl">
