Keep original names of bootstrap.js and module.js and use concat order to concenate the files.

--- a/webapps/iis/onepage.html
+++ b/webapps/iis/onepage.html
@@ -72,6 +72,7 @@
 	<!-- Digital D4 -->
 	<script src="js/dd4common.js"></script>
   <script src="js/iis.js"></script>
+  <script src="js/mapauto.js"></script>
 </head>
 
 <body data-ng-app="iis" data-ng-controller="IISCtrl as iisCtrl">
