Moved to proto3. Got rid of unused code.

--- a/src/js/html/dashboard.html
+++ b/src/js/html/dashboard.html
@@ -19,7 +19,7 @@
     <div data-dd4-table="TableType.UNCONFIRMED"></div>
   </div>
   <div class="columns">
-    <div data-iis-calendar></div>
+    <iis-calendar data-on-update="dashboardCtrl.refreshTables()"></iis-calendar>
   </div>
   <div class="columns">
     <div class="colx2-left">
