--- a/webapps/iis/login.html
+++ b/webapps/iis/login.html
@@ -19,7 +19,7 @@
     <link rel="icon" type="image/png" href="favicon-large.png">
 
     <script src="js/libs/modernizr.custom.min.js"></script>
-    <script src="js/libs/angular.min.js"></script>
+    <script src="js/lib/angular.min.js"></script>
     <script src="js/dd4common.js"></script>
   </head>
 
